--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ span,
   color: inherit;
 }
 /* ============ COMMON STYLES END ============ */
-.btn-update {
+.btn-refresh {
   border: none;
   background: transparent;
   color: rgb(25, 143, 240);
